src/tests/snapshots/synoik__tests__window_opening__check_target_size@dhU-b.snap
---
source: src/tests/window_opening.rs
description: "default window height: U\nborder on"
expression: snapshot
---
initial configure:
size: 608 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 608 × 680, bounds: 1240 × 680, states: [Activated]
